--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.2"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.github.hkk595:Resizer:v1.5'
 }
