--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.github.hkk595:Resizer:v1.5'
+
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
 }
